--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "qtoggleserver-dallastemp"
-version = "unknown-version"
+version = "0.0.0"
 description = "Dallas DS18B20 temperature sensor support for qToggleServer"
 authors = [
     {name = "Calin Crisan", email = "ccrisan@gmail.com"},
@@ -8,11 +8,24 @@ authors = [
 requires-python = "==3.10.*"
 readme = "README.md"
 license = {text = "Apache 2.0"}
-dependencies = []
+dependencies = [
+    "bleak>=0.14,<1",
+    "dbus-next>=0.2,<1",
+    "jinja2>=3,<4",
+    "jsonpointer>=2.0,<3",
+    "jsonschema>=2.5,<5",
+    "psutil>=5.5,<6",
+    "pyhocon>=0.3.50,<1",
+    "pyjwt>=2,<3",
+    "pytz",
+    "qui-server>=1.13.3",
+    "tornado>=6.0,<7",
+]
 
 [dependency-groups]
 dev = [
-  "ruff",
+    "pre-commit",
+    "ruff",
 ]
 
 [tool.ruff]
