--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Dallas DS18B20 temperature sensor support for qToggleServer"
 authors = [
     {name = "Calin Crisan", email = "ccrisan@gmail.com"},
 ]
-requires-python = "==3.10.*"
+requires-python = ">=3.11"
 readme = "README.md"
 license = {text = "Apache 2.0"}
 
@@ -17,7 +17,6 @@ dev = [
 
 [tool.ruff]
 line-length = 120
-target-version = "py310"
 lint.extend-select = ["I", "RUF022", "ANN"]
 lint.extend-ignore = ["ANN002", "ANN003", "ANN401"]
 lint.isort.lines-after-imports = 2
